# icebox-cli

./: .gitignore  .gitmessage  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml
.github/: OPENCLAW_COMMUNITY_ONRAMP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion_proposal.yml  execution_packet.yml  feature_request.yml
.github/workflows/: ci-enhancements.yml  ci.yml  docs-schemas.yml  docs-site.yml  mutation-testing.yml  pr-body-guard.yml  security-audit.yml
docs/: README.md  SUMMARY.md
docs/architecture/: README.md  brokered-credential-execution.md  compatibility-and-evolution.md  data-models-and-layout.md  errors-and-diagnostics.md  identity-and-enclave.md  mobile-app-early-architecture.md  mvp-decision-lock.md  overview.md  platform-and-distribution.md  rust-implementation.md  secret-management-and-run.md  security-model.md  technology-choices.md  vault-and-integrity.md
docs/guides/: BACKUP.md
docs/maintenance/: CALENDAR.md  DEPENDENCIES.md  LOG.md  README.md  REFACTOR_BACKLOG.md
docs/plan/: BACKLOG.md  BOOTSTRAP_ISSUES.md  CI.md  CURRENT_STATE.md  IMPLEMENTATION_BOOTSTRAP.md  README.md  ROADMAP.md  START_CODING_CHECKLIST.md  STATUS_MODEL.md  TESTING.md  task-status.json
docs/process/: DISCUSSION_LOG.md  (+3 more)
scripts/: verify_secure_enclave_prereqs.sh
skills/: README.md
src/: agent.rs  config.rs  did.rs  enclave.rs  error.rs  hardening.rs  lib.rs  main.rs  runner.rs  util.rs  vault.rs
tests/: e2e.rs  integration.rs  security.rs  system.rs
(+107 files in other folders)
