[package]
name = "icebox-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustix = { version = "1.1", features = ["process", "fs"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
crypto_box = { version = "0.9", features = ["seal"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework-sys = "2.15"
